keylines updated after extension request

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
-    "keylines": "../keylines-6.2.1-59417",
+    "keylines": "file:../keylines-6.4.0-62068",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
