--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "keylines": "file:../keylines-6.4.0-62068",
+    "moxios": "^0.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sinon": "^10.0.0"
   }
 }
